# The MIT License (MIT)

# Copyright (c) 2021-2023 Krux contributors

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.

[tool.poetry]
name = "krux"
version = "24.04.beta14"
description = "Open-source signing device firmware for Bitcoin"
authors = ["Jeff S <jeffreesun@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
translate = "^3.6.1"
embit = { path = "./vendor/embit/", develop = true }
ur = { path = "./vendor/foundation-ur-py/", develop = true }
urtypes = { path = "./vendor/urtypes/", develop = true }

# Docs site dependencies. Optional extras
mkdocs = { version = "^1.5.2", optional = true }
mkdocs-material = { version = "^9.4.14", optional = true }
urllib3 = "^2.1.0"  # Used by mkdocs-material, forces updated secure version
mkdocs-static-i18n = { version = "^0.46", optional = true }
pymdown-extensions = { version = "^10.0", optional = true }

# Simulator dependencies. Optional extras
numpy = { version = "^1.25.2", optional = true }
opencv-python = { version = "^4.8.0.74", optional = true }
Pillow = { version = "^10.0.1", optional = true }
pygame = { version = "^2.5.0", optional = true }
pyzbar = { version = "^0.1.9", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.12.2"
pytest = "^7.4.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
PyQRCode = "^1.2.1"
pycryptodome = "^3.17.0"
poethepoet = "^0.24.4"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "mkdocs-static-i18n", "pymdown-extensions"]
simulator = ["numpy", "opencv-python", "Pillow", "pygame", "pyzbar"]

[tool.poe.tasks]
# tasks for format code with black
# all tasks that start with `_` are'nt callable
format-src = "black ./src"
format-tests = "black ./tests"
format = ["format-src", "format-tests"]

# tasks for lint code with pylint
# all tasks that start with `_` are'nt callable
lint = "pylint ./src"

# tasks for test code
test = "poetry run pytest --cache-clear --cov src/krux --cov-report html ./tests"
test-verbose = "poetry run pytest --cache-clear --cov src/krux --cov-report html --show-capture all --capture tee-sys -r A ./tests"

# pre commit (do formatting, linting and tests)
pre-commit = ["format", "lint", "test"]
